@@ -33,7 +33,6 @@ import org.powermock.core.classloader.annotations.PrepareForTest;
 import org.powermock.modules.junit4.PowerMockRunner;
 import org.powermock.reflect.Whitebox;
 
-import java.util.Collections;
 import java.util.EnumSet;
 import java.util.List;
 import java.util.Set;
@@ -99,7 +98,7 @@ public class ScenarioServiceTest {
 
     @Test
     public void testGetScenariosByProductFamiliesAndStatuses() {
-        List<Scenario> scenarios = Collections.singletonList(new Scenario());
+        List<Scenario> scenarios = List.of(new Scenario());
         Set<String> productFamilies = Sets.newHashSet("FAS", "FAS2");
         expect(scenarioRepository.findByProductFamiliesAndStatuses(productFamilies,
             EnumSet.of(ScenarioStatusEnum.IN_PROGRESS))).andReturn(scenarios).once();
