@@ -19,7 +19,6 @@ import org.junit.Before;
 import org.junit.Test;
 import org.powermock.reflect.Whitebox;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.function.Predicate;
 
@@ -53,7 +52,7 @@ public class FasMatchingConsumerTest {
         Usage usage = new Usage();
         usage.setId(RupPersistUtils.generateUuid());
         usage.setStatus(UsageStatusEnum.NEW);
-        List<Usage> usages = Collections.singletonList(usage);
+        List<Usage> usages = List.of(usage);
         matchingService.matchingFasUsages(usages);
         expectLastCall().once();
         Capture<Predicate<Usage>> predicateCapture = newCapture();
