@@ -25,7 +25,6 @@ import org.junit.Before;
 import org.junit.Test;
 import org.powermock.reflect.Whitebox;
 
-import java.util.Collections;
 import java.util.List;
 
 /**
@@ -98,12 +97,11 @@ public class NtsScenarioServiceTest {
 
     @Test
     public void testSendToLm() {
-        List<String> usageIds = Collections.singletonList(RupPersistUtils.generateUuid());
+        List<String> usageIds = List.of(RupPersistUtils.generateUuid());
         Usage usage = new Usage();
         expect(ntsUsageService.moveToArchive(scenario)).andReturn(usageIds).once();
-        expect(usageService.getArchivedUsagesForSendToLmByIds(usageIds))
-            .andReturn(Collections.singletonList(usage)).once();
-        lmIntegrationService.sendToLm(Collections.singletonList(new ExternalUsage(usage)));
+        expect(usageService.getArchivedUsagesForSendToLmByIds(usageIds)).andReturn(List.of(usage)).once();
+        lmIntegrationService.sendToLm(List.of(new ExternalUsage(usage)));
         expectLastCall().once();
         scenarioRepository.updateStatus(scenario);
         expectLastCall().once();
