@@ -24,7 +24,6 @@ import org.springframework.test.context.junit4.SpringJUnit4ClassRunner;
 
 import java.math.BigDecimal;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 
 /**
@@ -75,7 +74,7 @@ public class ReconcileRightsholdersTest {
                     "1000.0000000000", "840.0000000000", "160.0000000000", SERVICE_FEE_16, new BigDecimal("1000.00"),
                     true, true))
             .expectUsageAudit(ImmutableMap.of("fcdaea01-2439-4c51-b3e2-23649cf710c7",
-                Collections.singletonList(buildLoadedAuditItem("Test Batch 1"))))
+                List.of(buildLoadedAuditItem("Test Batch 1"))))
             .build()
             .run();
     }
@@ -120,16 +119,14 @@ public class ReconcileRightsholdersTest {
             .expectUsageAudit(ImmutableMap.<String, List<UsageAuditItem>>builder()
                 .put("4713282c-c698-4ffb-8de1-44863d48954f", Arrays.asList(buildRhUpdatedAuditItem(2000152614L),
                     buildLoadedAuditItem(BATCH_NAME)))
-                .put("cf2b4a25-d786-4fee-9c7f-5bec12b017c1",
-                    Collections.singletonList(buildLoadedAuditItem(BATCH_NAME)))
+                .put("cf2b4a25-d786-4fee-9c7f-5bec12b017c1", List.of(buildLoadedAuditItem(BATCH_NAME)))
                 .put("d2da6044-7ff7-4b5d-984a-69978b9e0678", Arrays.asList(buildRhUpdatedAuditItem(1000002137L),
                     buildLoadedAuditItem(BATCH_NAME)))
                 .put("daf2483b-a7b4-415b-81d2-adb328423661", Arrays.asList(buildRhUpdatedAuditItem(1000002137L),
                     buildLoadedAuditItem(BATCH_NAME)))
                 .put("f1d2c084-973b-4c88-9b45-d4060d87b4ba", Arrays.asList(buildRhUpdatedAuditItem(2000152614L),
                     buildLoadedAuditItem(BATCH_NAME)))
-                .put("f9f5d608-c6e7-49dd-b658-174522b0549e",
-                    Collections.singletonList(buildLoadedAuditItem(BATCH_NAME)))
+                .put("f9f5d608-c6e7-49dd-b658-174522b0549e", List.of(buildLoadedAuditItem(BATCH_NAME)))
                 .build())
             .build()
             .run();
